# magic

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  envs.toml  infer.py  pyproject.toml  pyvenv.cfg  train.py
configs/: config.yaml
model/: discriminator.py  generator.py  trainer.py
tools/: config_reader.py  data_reader.py  finder_file.py  logger.py
